--- a/client/src/routes/chatPage/chatPage.css
+++ b/client/src/routes/chatPage/chatPage.css
@@ -6,14 +6,14 @@
   position: relative;
 
   .wrapper{
-    flex:1;
+    /* flex:1; */
     overflow: scroll;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
 
     .chat{
-      width: 50%;
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 20px;
